chore: change name of release workflow to lowercase

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,11 +2,11 @@ on:
   push:
     tags:
 
-name: Create Release
+name: create Release
 
 jobs:
   build:
-    name: Create Release
+    name: create Release
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
