fix: nicer releases

--- a/package.json
+++ b/package.json
@@ -46,8 +46,6 @@
       "requireCleanWorkingDir": false,
       "tagName": "${version}"
     },
-    "github": {
-      "release": false
-    }
+    "github": false
   }
 }
